# ProbFinalProj

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  append_puzzles.py  docker-compose.yml  generate_5.py  generate_puzzle.py  generated_valid_puzzles.json  puzzles.json  puzzles_5_viewer.html  recovered_valid_10.html  requirements.txt  small_test.py  success_puzzle.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  editorial_quality.py  enums.py  logging.py  policy_snapshot.py  stage1_quality.py  stage2_composer_policy.py  stage3_style_policy.py
backend/app/dataio/: __init__.py  feature_loader.py  seed_loader.py  sqlite_store.py
backend/app/domain/: protocols.py  value_objects.py
backend/app/features/: base.py  human_feature_strategy.py  mock_extractor.py  semantic_baseline.py
backend/app/generators/: __init__.py  base.py  lexical.py  phonetic.py  registry.py  semantic.py  theme.py
backend/app/pipeline/: __init__.py  builder.py  demo.py  human_pipeline.py  orchestration.py  semantic_pipeline.py  trace.py
backend/app/schemas/: api.py  (+5 more)
backend/tests/: conftest.py  test_api.py  test_blind_review.py  test_config.py  test_editorial_quality_recovery.py  test_ensemble.py  test_evaluation_models.py  test_evaluation_service.py  test_generator_diversity.py  test_human_owned_placeholders.py  test_nyt_benchmark_audit.py  test_pipeline.py  test_release_hardening.py  test_schemas.py  test_semantic_baseline.py  test_stage3_a_plus.py
(+190 files in other folders)
